client-single-connection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-client-single-conn
  namespace: tcp
  labels:
    app: tcp-client-single-conn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-client-single-conn
  template:
    metadata:
      labels:
        app: tcp-client-single-conn
    spec:
      containers:  
      - name: tcp-client-single-conn
        image: docker.io/pszeto/tcp-client-single-conn
        imagePullPolicy: Always
      - image: docker.io/pszeto/hey
        imagePullPolicy: Always
        name: hey
