client-single-connection/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tcp-client-single-conn
  namespace: tcp
spec:
  selector:
    app: tcp-client-single-conn
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
